--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
-    "react": "16.13.1",
+    "@unform/core": "^2.1.4",
+    "@unform/mobile": "^2.1.4",
+    "react": "^17.0.1",
     "react-native": "0.63.4",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-reanimated": "^1.13.2",
