--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@unform/mobile": "^2.1.4",
     "axios": "^0.21.1",
     "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-native": "0.63.4",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-image-picker": "^3.2.1",
     "react-native-reanimated": "^1.13.2",
