--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@babel/core": "^7.13.1",
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/geolocation": "^2.0.2",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.9.2",
     "@react-navigation/stack": "^5.14.2",
@@ -31,11 +33,11 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.7",
     "@types/styled-components-react-native": "^5.1.1",
