--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,7 +23,7 @@
     "@typescript-eslint/ban-types": "off",
     "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
-    "no-underscore-dangle": "error",
+    "no-underscore-dangle": "off",
     "no-useless-constructor": "off",
     "prettier/prettier": "error",
     "class-methods-use-this": "off",
