--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-native": "0.63.4",
     "react-native-chart-kit": "^6.11.0",
     "react-native-gesture-handler": "^1.9.0",
