--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@unform/core": "^2.1.4",
     "@unform/mobile": "^2.1.4",
     "axios": "^0.21.1",
+    "date-fns": "^2.17.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
